# aviation_capstone

./: .env.example  .gitignore  Dockerfile.airflow  Dockerfile.metabase  Dockerfile.prefect  README.md  docker-compose.yml  lakehouse_test.py  pyproject.toml  test.py
aviation_dbt/: dbt_project.yml
aviation_dbt/models/marts/: mart_airport_congestion.sql  mart_airport_delays.sql  mart_flight_details.sql  mart_weather_impact.sql  schema.yml
aviation_dbt/models/staging/: schema.yml  stg_flights.sql  stg_positions.sql  stg_weather.sql
evidence/: package-lock.json  package.json
evidence/pages/: congestion.md  flights.md  index.md  weather.md
evidence/sources/aviation/: airport_congestion.sql  airport_delays.sql  connection.yaml  flight_details.sql  weather_impact.sql
src/: logger_config.py
src/consumers/: flights_consumer.py
src/flows/: pipeline_flow.py
src/ingestion/: airlabs_ingestion.py  aviationstack_ingestion.py  noaa_ingestion.py  opensky_ingestion.py
src/producers/: aviationstack_producer.py
src/utils/: ducklake_export.py  parquet_writer.py  rabbitmq.py
