[project]
name = "aviation-capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "asyncpg>=0.31.0",
    "boto3>=1.43.11",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.2",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=3.0.2",
    "prefect>=3.7.1",
    "prefect-sqlalchemy>=0.6.1",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]
